# atrebas

./: .editorconfig  .gitignore  CNAME  CONTRIBUTING.md  README.md  atrebas.flatpakref  atrebas.flatpakrepo  default.css  index.html  meson.build  meson_options.txt
.github/workflows/: cd.yml  ci.yml  cr.yml
.reuse/: dep5
build-aux/docker/: Dockerfile  Dockerfile.toolbox
build-aux/flatpak/: ca.andyholmes.Atrebas.Devel.json  ca.andyholmes.Atrebas.json
coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/: atrebas-application.c.func-sort-c.html  atrebas-application.c.func.html  atrebas-application.c.gcov.html  atrebas-application.h.func-sort-c.html  atrebas-application.h.func.html  atrebas-application.h.gcov.html  atrebas-backend-utils.c.func-sort-c.html  atrebas-backend-utils.c.func.html  atrebas-backend-utils.c.gcov.html  atrebas-backend.c.func-sort-c.html  atrebas-backend.c.func.html  atrebas-backend.c.gcov.html  atrebas-backend.h.func-sort-c.html  atrebas-backend.h.func.html  atrebas-backend.h.gcov.html  atrebas-bookmarks.c.func-sort-c.html  atrebas-bookmarks.c.func.html  atrebas-bookmarks.c.gcov.html  atrebas-bookmarks.h.func-sort-c.html  atrebas-bookmarks.h.func.html  atrebas-bookmarks.h.gcov.html  atrebas-feature-layer.c.func-sort-c.html  atrebas-feature-layer.c.func.html  atrebas-feature-layer.c.gcov.html  atrebas-feature-layer.h.func-sort-c.html  atrebas-feature-layer.h.func.html  atrebas-feature-layer.h.gcov.html  atrebas-feature.c.func-sort-c.html  atrebas-feature.c.func.html  atrebas-feature.c.gcov.html  atrebas-feature.h.func-sort-c.html  atrebas-feature.h.func.html  atrebas-feature.h.gcov.html  atrebas-legend-row.c.func-sort-c.html  atrebas-legend-row.c.func.html  atrebas-legend-row.c.gcov.html  atrebas-legend-row.h.func-sort-c.html  atrebas-legend-row.h.func.html  atrebas-legend-row.h.gcov.html  atrebas-legend-symbol.c.func-sort-c.html  (+67 more)
data/: ca.andyholmes.Atrebas.desktop.in.in  ca.andyholmes.Atrebas.gresource.xml  ca.andyholmes.Atrebas.gschema.xml  ca.andyholmes.Atrebas.service.in  meson.build
data/css/: atrebas.css
data/maps/: indigenousLanguages.json  indigenousTerritories.json  indigenousTreaties.json
data/metainfo/: ca.andyholmes.Atrebas.metainfo.xml.in.in  meson.build
data/ui/: atrebas-legend-row.ui  atrebas-legend.ui  atrebas-map-marker.ui  atrebas-map-view.ui  atrebas-place-bar.ui  atrebas-place-header.ui  atrebas-preferences-window.ui  atrebas-window.ui
po/: POTFILES  atrebas.pot  hur.po  meson.build
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 06ac35bb2da4a114fe16d44bb8a472e02fd4fc1e7a9e1f0a5151c666cf7aad52-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  09b2f9ccef580c2e61d6f90663213724d3e3ce0ebe684824f8dbe118ee3eeb35-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  12f33d70f377d46b014aedbc609dd372e01f1a05238dbe10a98e2b0a9024fde1-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  4a498d3378da9a452746ac66b3cd021cb6dc8bc5f5189736dc231354f9af4d1f-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  66b635dad6763cabb4e048f545bc600b8231a6d3112739759fa04c0b363d7774-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  6ddd22dc190a28e4b18353b333a9250ed96fa52288ceb397e5b532bd1d980843-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  717a4181fc0d1b05f741ca2e65528a5c4cb1214b5f35faaa66e5a652479f7261-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  80cde5a1d998bbdee663d7da429cde4a4fa7870b87f0d61e2c9b9a4babe164f1-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  91a903f381907dffb85cadf95b0bc9e43953dd8067e3daec7455c3a7e73e5b69-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  b460b9a007e8472f6ef26ac85649018818f219992a6eb517ee47eeaa1f00a26b-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  d41d4f935d18d578fbfcb7283c8f62bfc57921c655cec513efbb09fc4b14094c-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  e2fdc26229b8230894bf8fa0ed618916cde8cd12c361f4a035e83b5d9be6f3e0-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  e6e69e95556fac23078fca25100babe2c5b62c26f18195d9dac1c1164cf7fd03-70c1f87a71ac952534bef2cfab43c623e3bce89c9727027074bf14cf8774c6f3.delta  e855a57992c32a224af6362684f83b59b38476eb84f436b3d43a745d9dfcb07f-99450559c7a981a24097534edea0d6c4a3c0e93a74b7627d610173813dbe1650.delta  (+2 more)
src/: atrebas-application-credits.h  atrebas-application.c  atrebas-application.h  atrebas-backend-private.h  atrebas-backend-utils.c  atrebas-backend.c  atrebas-backend.h  atrebas-bookmarks.c  atrebas-bookmarks.h  atrebas-feature-layer.c  atrebas-feature-layer.h  atrebas-feature.c  atrebas-feature.h  atrebas-legend-row.c  atrebas-legend-row.h  atrebas-legend-symbol.c  atrebas-legend-symbol.h  atrebas-legend.c  atrebas-legend.h  atrebas-macros.h  atrebas-map-marker.c  atrebas-map-marker.h  atrebas-map-view.c  atrebas-map-view.h  atrebas-place-bar.c  atrebas-place-bar.h  atrebas-place-header.c  atrebas-place-header.h  atrebas-preferences-window.c  atrebas-preferences-window.h  atrebas-search-model.c  atrebas-search-model.h  atrebas-utils.c  atrebas-utils.h  atrebas-window.c  atrebas-window.h  atrebas.h  main.c  meson.build
subprojects/: libportal.wrap  libshumate.wrap
tests/: gsettings-test-init.sh  meson.build  mock-common.h  mock-map-source.c  mock-map-source.h  test-backend.c  test-bookmarks.c  test-feature-layer.c  test-feature.c  test-legend-row.c  test-legend-symbol.c  test-legend.c  test-map-marker.c  test-map-view.c  test-place-bar.c  test-place-header.c  test-preferences-window.c  test-search-model.c
tests/data/: testFeature.json  testFeatureCollection.json
tests/data/schemas/: FeatureCollection.json  GeoJSON.json  Geometry.json  GeometryCollection.json  LineString.json  MultiLineString.json  MultiPoint.json  MultiPolygon.json  Point.json
tests/extra/: Dockerfile  lsan.supp  tsan.supp
(+6 files in other folders)
