# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2022 Andy Holmes <andrew.g.r.holmes@gmail.com>

option('profile',
  description: 'Build profile (default, devel)',
      choices: ['default', 'devel'],
         type: 'combo',
        value: 'default',
)

option('tests',
         type: 'boolean',
        value: false,
  description: 'Build unit tests',
)
